# auto-cursor-releases

./: .gitignore  README.md  bank_card_config.example.json  convert_svg_to_png.py  email_config.example.json  index.html  pack_staged_for_github.sh  package.json  pnpm-lock.yaml  tailwind.config.js  test_bank_card.bat  test_bank_card.sh  vite.config.ts
.github/workflows/: PUBLIC_REPO_SETUP.md  README.md  build.yml  quick-build.yml  release-to-public.yml
scripts/: README.md  build-macos.sh  upload-to-release.sh  upload.sh
src/: App.css  App.tsx  App_old.tsx  auto-cursor.code-workspace  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pyBuild/linux/: README.md
src-tauri/pyBuild/macos/: README.md
src-tauri/pyBuild/windows/: README.md
src-tauri/python_scripts/: .gitignore  README.md  account_manager.py  build_executable.py  cdp_flow_runner.py  config.py  cursor_register_manual.py  manual_register.py  new_signup.py  openai_oauth_step1.py  openai_oauth_step2.py  requirements_minimal.txt  reset_machine_manual.py  run_manual_register.sh  standalone_entry.py  test_bank_card_fill.py
src-tauri/src/: account_manager.rs  auth_checker.rs  cursor_backup.rs  cursor_info.rs  lib.rs  logger.rs  machine_id.rs  main.rs  next_work_web.rs  other.rs  tray.rs  vless_proxy.rs  weblog.rs
src/components/: AccountCard.tsx  AccountList.tsx  AccountUsageModal.tsx  AggregatedUsageDisplay.tsx  BankCardConfigModal.tsx  Button.tsx  ConfirmDialog.tsx  EmailConfigModal.tsx  ErrorBoundary.tsx  HaozhumaConfigModal.tsx  Layout.tsx  LoadingSpinner.tsx  TitleBar.tsx  Toast.tsx  UpdateModal.tsx  UsageDetailsModal.tsx  UsageDisplay.tsx  UsageProgressDisplay.tsx  UsageProgressModal.tsx  WebServerConfig.tsx  WorkspaceDetailsModal.tsx
src/context/: UsageContext.tsx
src/pages/: AuthCheckPage.tsx  AutoRegisterPage.tsx  CursorBackupPage.tsx  HaozhuApiPage.tsx  HomePage.tsx  MachineIdPage.tsx  TokenManagePage.tsx
src/services/: accountService.ts  analyticsService.ts  (+9 more)
(+18 files in other folders)
